# onnx-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements-gemmini.txt
cmake/: FindGemmini.cmake
docs/: BUILD.md  DocumentList.md
docs/doc_check/: CMakeLists.txt  check.py
docs/gemmini/: GemminiBackend.md  GemminiCodeMap.md  GemminiDependencies.md  GemminiExamples.md  GemminiTesting.md  GemminiTroubleshooting.md  Gemmini_AcceleratorONNX_MLIR_v3.1.tex  Gemmini_ONNX_MLIR_IEEE_Presentation.fdb_latexmk  Gemmini_ONNX_MLIR_IEEE_Presentation.fls  Gemmini_ONNX_MLIR_IEEE_Presentation.nav  Gemmini_ONNX_MLIR_IEEE_Presentation.tex  Gemmini_ONNX_MLIR_IEEE_Presentation.vrb  ONNX_to_RISCV_ResNet18_Gemmini_Pipeline.tex  README.md  VALIDATION.md  run_resnet18_benchmark.sh
include/onnx-mlir/Compiler/: CMakeLists.txt
include/onnx-mlir/Runtime/: OMTensor.h  OMTensorList.h
scripts/: build_rv64.sh  check_prerequisites.sh  cleanup_project.sh  setup_gemmini_simulator.sh  test_all.sh
src/: CMakeLists.txt
src/Accelerators/: Accelerator.cpp  Accelerator.hpp  CMakeLists.txt  CreateAcceleratorsInc.cmake
src/Accelerators/Gemmini/: CHANGELOG.md  CMakeLists.txt  GemminiAccelerator.cpp  GemminiAccelerator.hpp
src/Accelerators/Gemmini/.docs/: 01-overview.md  02-source-files.md  03-compiler-pipeline.md  04-dialects.md  05-runtime-functions.md  06-hardware-parameters.md  README.md
src/Accelerators/Gemmini/Compiler/: CMakeLists.txt  GemminiCompilerOptions.hpp  GemminiCompilerUtils.cpp  GemminiCompilerUtils.hpp
src/Accelerators/Gemmini/Conversion/: CMakeLists.txt
src/Accelerators/Gemmini/Conversion/GemminiLowToLLVM/: CMakeLists.txt  GemminiLowToLLVM.cpp  GemminiLowToLLVM.hpp
src/Accelerators/Gemmini/Conversion/GemminiToGemminiLow/: CMakeLists.txt  GemminiToGemminiLow.cpp  GemminiToGemminiLow.hpp
src/Accelerators/Gemmini/Conversion/ONNXToGemmini/: CMakeLists.txt  ONNXToGemmini.cpp  ONNXToGemmini.hpp
src/Accelerators/Gemmini/Dialect/: CMakeLists.txt
src/Accelerators/Gemmini/Dialect/Gemmini/: CMakeLists.txt  Gemmini.td  GemminiOps.cpp  GemminiOps.hpp  GemminiOps.td  GemminiTypes.td
src/Accelerators/Gemmini/Dialect/GemminiLow/: CMakeLists.txt  GemminiLow.td  GemminiLowOps.cpp  GemminiLowOps.hpp  GemminiLowOps.td
src/Accelerators/Gemmini/Pass/: GemminiPasses.hpp
src/Accelerators/Gemmini/Runtime/: CMakeLists.txt  FILES_EXPLAINED.md  OMRuntimeGemmini.cpp  OMRuntimeGemmini.hpp
src/Accelerators/Gemmini/Runtime/gemmini-hardware-abi/: README.md
src/Accelerators/Gemmini/Runtime/gemmini-hardware-abi/include/: README.md  accumulator.h  character.h  gemmini.h  gemmini_counter.h  gemmini_nn.h  gemmini_params.h  gemmini_params_ee290.h  gemmini_params_ee290_smallsp.h  gemmini_testutils.h  translator.h
src/Accelerators/Gemmini/Runtime/gemmini-hardware-abi/rocc-software/src/: riscv_test_rocc.h  xcustom.h
src/Accelerators/Gemmini/Support/: CMakeLists.txt  GemminiTargetInfo.cpp  GemminiTargetInfo.hpp  GemminiTargetInfo.hpp.in
src/Accelerators/Gemmini/Transform/: CMakeLists.txt
src/Accelerators/Gemmini/Transform/Gemmini/: CMakeLists.txt  GemminiTiling.cpp  GemminiTiling.hpp
src/Accelerators/Gemmini/Transform/GemminiLow/: CMakeLists.txt  GemminiLowRewrite.cpp  GemminiLowRewrite.hpp  StaticScratchpadAllocation.cpp  StaticScratchpadAllocation.hpp
src/Builder/: OpBuildTable.inc.dc
src/Compiler/: CMakeLists.txt  ExternalUtil.hpp.cfg
src/Compiler/Debug/: ExternalUtil.hpp
src/Compiler/Release/: ExternalUtil.hpp
src/Conversion/ONNXToKrnl/NN/: Normalization.cpp
src/Dialect/ONNX/: ONNXOps.td.inc.dc
src/Dialect/ONNX/Transforms/: Recompose.cpp
src/Runtime/: CMakeLists.txt
src/Runtime/jni/jsoniter/src/jsoniter_external-stamp/: download-jsoniter_external.cmake  (+1 more)
src/Runtime/jni/jsoniter/tmp/: jsoniter_external-mkdirs.cmake
src/Tools/onnx-mlir-opt/: CMakeLists.txt
test/: CMakeLists.txt
test/accelerators/: CMakeLists.txt
test/accelerators/gemmini/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  simulator_run.py
test/accelerators/gemmini/integration/: bert_tiny_compile_run.py  concat_compile_run.py  convtranspose_compile_run.py  mobilenetv2_compile_run.py  mul_compile_run.py  pad_compile_run.py  quantization_roundtrip_run.py  resize_compile_run.py  resnet18_compile_run.py  sigmoid_compile_run.py  simulator_bert_tiny_run.py  simulator_matmul_i8_run.py  simulator_mobilenetv2_run.py  simulator_numerical_correctness.py  simulator_resnet18_run.py  slice_compile_run.py  split_compile_run.py  transpose_compile_run.py
test/accelerators/gemmini/tools/: benchmark_gemmini.py  correctness_verifier.py  double_buffer_spike_benchmark.py  fetch_test_models.py  gemmini_emulator.py  matmul_spike_benchmark.py  matmul_throughput_benchmark.py  memory_access_checker.py  model_compile_run.py  model_zoo_manifest.json  performance_counter.py  prepare_resnet18_softmax_model.py  run_model_zoo.py
test/mlir/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/mlir/accelerators/gemmini/: concat_axis0.mlir  concat_axis1.mlir  concat_axis2.mlir  concat_dynamic_batch.mlir  config_transpose_bits.mlir  conv2d_dynamic_batch.mlir  conv2d_dynamic_spatial.mlir  conv2d_gemmini.mlir  convtranspose_gemmini.mlir  direct_matmul_i8_rocc.mlir  direct_matmul_rocc.mlir  direct_matmul_rocc_edge.mlir  gemm_dynamic_batch.mlir  gemm_gemmini.mlir  gemmini_double_buffer.mlir  gemmini_low_rewrite.mlir  lit.local.cfg  matmul_fp16.mlir  matmul_fp32.mlir  matmul_fp32_batched.mlir  matmul_i8.mlir  mul_dynamic_batch.mlir  mul_static.mlir  pad_constant.mlir  pad_edge.mlir  pad_reflect.mlir  resize_linear.mlir  resize_nearest.mlir  sigmoid_dynamic_batch.mlir  sigmoid_static.mlir  slice_dynamic_batch.mlir  slice_negative_indices.mlir  slice_start_end.mlir  slice_step.mlir  split_3_outputs.mlir  split_axis1.mlir  split_axis2.mlir  split_dynamic_batch.mlir  transpose_dynamic_batch.mlir  transpose_identity.mlir  (+2 more)
test/unit/: CMakeLists.txt
test/unit/Gemmini/: CMakeLists.txt  TestGemminiTiling.cpp
tools/: clean_model.py  create_medium_model.py  driver_imagenet.c  driver_res2net.c  gen_report_pdf.py
